# win_purge

./: .gitignore  LICENSE.md  README.md  abc_mypy_test.py  ban_init.py  helpers.py  purge_files.py  pyproject.toml  requirements.txt
src/win_purge/: __main__.py  directories.py  registry.py  reglib.py
win_purge/: __main__.py  directories.py  registry.py  reglib.py
